--- a/Proyecto-Angular/src/app/components/header/header.component.html
+++ b/Proyecto-Angular/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
                 </span>
             </button>
             <div #navBar class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul id="nav-colapsado" class="navbar-nav mb-2 mb-xl-0 align-items-center">                            
+                <ul id="nav-colapsado" class="navbar-nav mb-2 mb-xl-0 mt-xl-2 align-items-center">                            
                     <li class="nav-item">
                         <a class="nav-link link"  href="#acerca de mi" (click)="contraerNav()">Acerca de mí</a>
                     </li>                
@@ -44,7 +44,7 @@
                         </a>
                     </li>                    
                 </ul>  
-                <div class="d-flex justify-content-end me-xl-2">                    
+                <div class="d-flex justify-content-end me-xl-2 mt-xl-2">                    
                     <button 
                         id="boton_login" 
                         (click)="contraerNav()" 
