--- a/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.css
+++ b/Proyecto-Angular/src/app/components/header/modal-login/modal-login.component.css
@@ -4,3 +4,9 @@ label,h3 {
 #user{
     margin-bottom: 7px
 }
+
+.mensajeErrorCampo{   
+    padding: 4px !important;   
+    margin-bottom: 0px;
+    
+}
