--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -1,6 +1,6 @@
 <section  class="d-flex justify-content-center align-items-center" id="conocimientos" >
     <div class="card" id="container" appScrollConocimientos >
-        <div class="my-2 d-flex justify-content-between align-items-baseline">
+        <div class="my-2 d-flex justify-content-between align-items-baseline flex-wrap">
             <h3><strong>{{titulo}}</strong></h3>
             <div>
                 <fa-icon 
