--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica.component.html
@@ -1,6 +1,6 @@
 <section class="d-flex justify-content-center align-items-center" id="formacion academica" >
     <div class="card" id="container" appScrollFormacionAcademica>
-        <div class="my-3 d-flex justify-content-between align-items-baseline">
+        <div class="my-3 d-flex justify-content-between align-items-baseline flex-wrap">
             <h3><strong>{{titulo}}</strong></h3>
             <div>
                 <fa-icon
