--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
@@ -14,7 +14,8 @@ h4{
 }
 
 #contenedor-descripcion {
-    height:180px
+    height:180px;
+    overflow: auto;
 }
 
 img {
@@ -63,7 +64,7 @@ img {
     transform: scale(1.3)
 }
 
-@media screen and (max-width:950px) {
+@media screen and (max-width:900px) {
    #contenedor-texto{    
     position: absolute;
     width: 100%;
@@ -92,8 +93,7 @@ img {
    }
 }
 
-@media screen and (max-width:450px) {    
- 
+@media screen and (max-width:450px) {  
     .contenedor-tecnologias-iconos>div{
          gap: 1 !important;        
          overflow-x: auto;
