animcaciones aos y responsive formularios edicion

--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -165,19 +165,19 @@
                 <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Subtítulo</h3>                        
             </div>
             <div class="modal-body">                                 
-                <div class="d-flex">
+                <div class="d-flex modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Título actual</label>
-                    <p class="etiquetaModal"><b>{{titulo}}</b></p>                    
+                    <p class="inputModal">{{titulo}}</p>                    
                 </div>
-                <div class="d-flex align-items-baseline mb-3">
+                <div class="d-flex align-items-baseline mb-3 modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Nuevo título</label>
                     <input type="text" #nuevoTitulo class="form-control inputModal" placeholder="Ingrese nuevo título">
                 </div> 
-                <div class="d-flex align-items-baseline">
+                <div class="d-flex align-items-baseline modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Subtítulo actual</label>
-                    <p class="textoModal etiquetaModal"><b>{{subtitulo}}</b></p>                                       
+                    <p class="textoModal inputModal">{{subtitulo}}</p>                                       
                 </div>
-                <div class="d-flex align-items-baseline mb-1">
+                <div class="d-flex align-items-baseline mb-1 modal-body-div">
                     <label for="user" class="form-label etiquetaModal">Nuevo subtítulo</label>
                     <input type="text" #nuevoSubtitulo class="form-control inputModal" placeholder="Ingrese nuevo subtítulo">
                 </div>                
