--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.css
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.css
@@ -1,20 +1,7 @@
-#container {
-    width: 70%;
-    opacity: 1;
-    transform: translateY(0px);
-    transition: all 0.5s ease
-}
-
 
 h3{
     color: lightblue;
 }
-
-.animacion-seccion{    
-    transform: translateY(50px) !important;
-    opacity: 1 !important;
-    transition: all 0.5s ease;           
-} 
 
 fa-icon{
     font-size:2.5em; 
@@ -53,3 +40,9 @@ fa-icon:hover{
     width: 70%;
 }
 
+@media screen and (max-width: 600px) {
+
+    section {
+        margin-top: 0px
+    }
+}
