--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -1,6 +1,6 @@
-<section class="d-flex justify-content-center align-items-center" id="acerca de mi"  >
-    <div class="card" id="container" appScrollAcercaDeMi>
-        <div class="my-2 d-flex justify-content-between align-items-baseline" >                        
+<section class="d-flex justify-content-center align-items-center " id="acerca de mi"  >
+    <div class="card" id="container" >
+        <div class="my-2 d-flex justify-content-between align-items-baseline" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">                        
             <h3><strong>{{titulo}}</strong></h3>                          
             <fa-icon
                     *ngIf="modoEdicion" 
@@ -9,7 +9,7 @@
                     data-bs-target="#acercademi-modal">
             </fa-icon> 
         </div>        
-        <div>
+        <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
             <p class="card-text">{{texto}}</p> 
         </div>                                                                     
     </div>    
@@ -29,11 +29,11 @@
                     <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
                 </div>
                 <div class="modal-body">                                 
-                    <div class="d-flex">
-                        <label for="user" class="form-label etiquetaModal">Título actual</label>
-                        <p class="etiquetaModal" id="titulo"><b>{{titulo}}</b></p>                    
+                    <div class="d-flex modal-body-div">
+                        <label for="user" class="form-label etiquetaModal ">Título actual</label>
+                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Nuevo título</label>
                         <input 
                             #nuevoTitulo 
@@ -41,11 +41,11 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese nuevo título">
                     </div> 
-                    <div class="d-flex align-items-baseline">
+                    <div class="d-flex align-items-baseline  modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Texto actual</label>
-                        <p class="textoModal etiquetaModal2"><b>{{texto}}</b></p>                                       
+                        <p class="textoModal inputModal2">{{texto}}</p>                                       
                     </div>
-                    <div class="d-flex align-items-center mb-1">
+                    <div class="d-flex align-items-center mb-1 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Nuevo texto</label>
                         <textarea
                             #nuevoTexto 
