--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.css
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.css
@@ -1,4 +1,6 @@
-
+section {
+    padding-top: 30px !important;
+}
 #container {
     width: 60%;
     margin-top:70px;    
@@ -52,7 +54,7 @@ h3{
     padding: 10px 0px 10px 40px
 }
 
-label, #container-form p{
+#container-info label, #container-form p{
     font-size: 16px;
     font-weight: bold;
 }
@@ -104,6 +106,7 @@ textarea{
 
 
 @media  screen and  (max-width:1000px){
+
     #container-form-info{
         display:inline-block !important;
         width: 100%;
@@ -119,15 +122,16 @@ textarea{
     }
 
     #container-info div {
-        margin-left: 0px;
-       
+        margin-left: 0px;       
     }
-
-        
+       
 }
 
 @media  screen and  (max-width:500px){
     #container-form{      
        padding-right: 20px       
-    }
+    } 
+   
 }
+
+
