--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -1,10 +1,8 @@
 <section id="contacto" class="d-flex justify-content-center">
-    <div id="container" data-aos="fade-down"
-   
-    data-aos-duration="500">        
+    <div id="container" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">        
         <div class="mb-4 d-flex justify-content-center align-items-baseline flex-wrap">
             <h3><strong>{{titulo}}</strong></h3>
-            <div class="ms-3" *ngIf="modoEdicion" >
+            <div class="ms-3" *ngIf="modoEdicion">
                 <fa-icon
                     class="icono-edicion"
                     [icon]="faSquarePen" 
@@ -150,11 +148,11 @@
                     <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título e Información de Contacto</h3>                        
                 </div>
                 <div class="modal-body">                                 
-                    <div class="d-flex">
+                    <div class="d-flex modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Título actual</label>
-                        <p class="etiquetaModal" id="titulo"><b>{{titulo}}</b></p>                    
+                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline modal-body-div mb-3">
                         <label for="user" class="form-label etiquetaModal">Nuevo título</label>
                         <input 
                             #nuevoTitulo 
@@ -162,24 +160,36 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese nuevo título">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
-                        <label for="user" class="form-label etiquetaModal">Ubicación</label>
+                    <div class="d-flex modal-body-div">
+                        <label for="user" class="form-label etiquetaModal">Ubicación actual</label>
+                        <p class="inputModal" id="titulo">{{ubicacionContacto}}</p>                    
+                    </div>
+                    <div class="d-flex align-items-baseline modal-body-div mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nueva ubicación</label>
                         <input 
                             #ubicacion 
                             type="text" 
                             class="form-control inputModal" 
-                            placeholder="Ingresar ubicación (provincia, país)">
-                    </div>
-                    <div class="d-flex align-items-baseline mb-3">
-                        <label for="user" class="form-label etiquetaModal">Teléfono</label>
+                            placeholder="Ingrese ubicación (provincia, país)">
+                    </div> 
+                    <div class="d-flex modal-body-div">
+                        <label for="user" class="form-label etiquetaModal">Teléfono actual</label>
+                        <p class="inputModal" id="titulo">{{telefonoContacto}}</p>                    
+                    </div>                  
+                    <div class="d-flex flex-wrap align-items-baseline modal-body-div mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nuevo teléfono</label>
                         <input 
                             #telefono
                             type="text" 
                             class="form-control inputModal" 
                             placeholder="Ingresar teléfono">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
-                        <label for="user" class="form-label etiquetaModal">Correo</label>
+                    <div class="d-flex modal-body-div">
+                        <label for="user" class="form-label etiquetaModal">Correo actual</label>
+                        <p class="inputModal" id="titulo">{{correoContacto}}</p>                    
+                    </div>
+                    <div class="d-flex align-items-baseline modal-body-div mb-3">
+                        <label for="user" class="form-label etiquetaModal">Nuevo correo</label>
                         <input 
                             #correo
                             type="text" 
