--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -1,6 +1,6 @@
-<section class="d-flex justify-content-center align-items-end" id="experiencia laboral" >
-    <div class="card" id="container" appScrollExpLaboral>
-        <div class="my-2 d-flex justify-content-between align-items-baseline flex-wrap">
+<section class="d-flex justify-content-center align-items-center" id="experiencia laboral">
+    <div class="card" id="container">
+        <div class="my-2 d-flex justify-content-between align-items-baseline flex-wrap" data-aos="fade-right" data-aos-duration="800" data-aos-easing="ease-in-out">
             <h3><strong>{{titulo}}</strong></h3>
             <div>
                 <fa-icon
@@ -20,7 +20,7 @@
             </div>
             
         </div>
-        <div class="d-flex my-2 position-relative" id="container-items-lista-exp">
+        <div class="d-flex my-2 position-relative" id="container-items-lista-exp" data-aos="fade-right" data-aos-duration="800" data-aos-easing="ease-in-out">
             <div class="me-2 container-lista-exp">                 
                 <button  
                     *ngFor="let experiencia of experiencias" 
@@ -70,11 +70,11 @@
                     <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
                 </div>
                 <div class="modal-body">                                 
-                    <div class="d-flex">
+                    <div class="d-flex modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Título actual</label>
-                        <p class="etiquetaModal" id="titulo"><b>{{titulo}}</b></p>                    
+                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Nuevo título</label>
                         <input 
                             #nuevoTitulo 
@@ -121,7 +121,7 @@
                 </div>
                 <div class="modal-body">                           
                     
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Empresa</label>
                         <input 
                             #empresa 
@@ -129,7 +129,7 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese el nombre de la empresa">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Puesto</label>
                         <input 
                             #puesto
@@ -137,7 +137,7 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese su puesto en la empresa">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">URL</label>
                         <input 
                             #url
@@ -145,7 +145,7 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese la url de la página web de la empresa">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Fecha Inicio</label>
                         <input 
                             #fechaInicio
@@ -153,7 +153,7 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese fecha de inicio (mes y año)">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Fecha Fin</label>
                         <input 
                             #fechaFin
@@ -161,7 +161,7 @@
                             class="form-control inputModal" 
                             placeholder="Ingrese fecha de finalización (mes y año)">
                     </div>
-                    <div class="d-flex align-items-baseline mb-3">
+                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
                         <label for="user" class="form-label etiquetaModal">Descripción</label>              
                             <textarea
                                 #descripcion 
