--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 section {
-    min-height: 100vh
+    padding-top: 100px;
 }
 
 section > #container {
@@ -57,15 +57,7 @@ footer {
     background-color: #495670;    
     border-radius: 10px; 
     border: 3px solid black;}
-
-/* MEDIA QUERYS */
-
-@media screen and (min-width:1400px){
-    section {
-        min-height: 80vh !important;
-    }
     
-}
 
 @media screen and (max-width:1000px){
     section > #container {
@@ -78,7 +70,18 @@ footer {
     section > #container {
         width: 87% !important;       
     }
+   
+    .modal-body-div {
+        display: block !important;
+    }
     
+    .etiquetaModal, .inputModal, .inputModal2, .etiquetaModal2 {
+        width: 100% !important;
+    }
+
+    .etiquetaModal, .etiquetaModal2{
+        font-weight: bold;
+    }
 }
 
 @media screen and (max-width:350px){
