--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -1,6 +1,6 @@
 <section id="contacto" class="d-flex justify-content-center">
-    <div id="container" data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">        
-        <div class="mb-4 d-flex justify-content-center align-items-baseline flex-wrap">
+    <div id="container">        
+        <div class="mb-4 d-flex justify-content-center align-items-baseline flex-wrap" data-aos="zoom-in" data-aos-duration="800" data-aos-easing="ease-in-out">
             <h3><strong>{{titulo}}</strong></h3>
             <div class="ms-3" *ngIf="modoEdicion">
                 <fa-icon
@@ -11,7 +11,7 @@
                 </fa-icon>                               
             </div>            
         </div>
-        <div class="mt-4 d-flex" id="container-form-info" >
+        <div class="mt-4 d-flex" id="container-form-info" data-aos="zoom-in" data-aos-duration="800" data-aos-easing="ease-in-out" >
             <div id="container-form">                
                 <div class="row">
                     <div class="col">
